fixed z-index on input

--- a/src/sass/_h1Style.scss
+++ b/src/sass/_h1Style.scss
@@ -3,7 +3,7 @@ h1 {
   position: relative;
   letter-spacing: -5px;
   color: rgb(236, 236, 246);
-  font-size: 15rem;
+  font-size: 12rem;
   margin: 0;
 }
 
